new version module_12

--- a/JS/Module12/package.json
+++ b/JS/Module12/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel src -d build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yevgeniya_Rashchupkina <eugenrashupkina@gmail.com>",
   "license": "ISC",
@@ -13,7 +13,12 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "gulp-babel": "^8.0.0"
+    "gulp-babel": "^7.0.1",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-uglify": "^3.0.1"
   }
 }
